--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Font Awsome CDN -->
+    <script src="https://kit.fontawesome.com/2937a427d0.js" crossorigin="anonymous"></script>
+
     <style>
         .sora-font{
             font-family: "Sora", serif;
@@ -36,8 +39,68 @@
 </head>
 <body class="sora-font">
 
-    <header>
-        <h1 class="bg-nature-primary">Hello world</h1>
+    <header class="md:container mx-auto">
+        <nav>
+            <div class="navbar py-5">
+                <div class="navbar-start">
+                  <div class="dropdown">
+                    <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                        <img class="w-14" src="./assets/logo-responsive.png" alt="">
+                      <!-- <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-5 w-5"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M4 6h16M4 12h8m-8 6h16" />
+                      </svg> -->
+                    </div>
+                    <ul
+                      tabindex="0"
+                      class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                      <li><a>Product</a></li>
+                      <li><a>Services</a></li>
+                      <li><a>Contact Us</a></li>
+                    </ul>
+                  </div>
+                  <div  class="hidden lg:flex">
+                    <img src="./assets/logo-header.png" alt="">
+                  </div>
+                  <!-- <a class="btn btn-ghost text-xl">daisyUI</a> -->
+                </div>
+                <div class="navbar-center hidden lg:flex">
+                  <ul class="menu menu-horizontal px-1  text-xl font-normal">
+                    <li><a>Product</a></li>
+                    <li><a>Services</a></li>
+                    <li><a>Contact Us</a></li>
+                  </ul>
+                </div>
+                
+                <div class="navbar-end hidden lg:flex">
+                    <div>
+                        <i class="fa-solid fa-magnifying-glass text-3xl"></i>
+                        <i class="fa-solid fa-cart-shopping text-3xl mx-5"></i>
+                    </div>
+                  <div>
+                    <a class="btn btn-outline border-nature-primary text-black text-xl font-normal mx-5">Login</a>
+                  <a class="btn text-white bg-nature-primary text-xl font-normal">Register</a>
+                  </div>
+                </div>
+
+                <div class="navbar-end lg:hidden mr-5">
+                    <i class="fa-solid fa-bars text-5xl"></i>
+                </div>
+              </div>
+        </nav>
+
+        <!-- Banner Section -->
+        <section>
+
+        </section>
     </header>
 
     <main></main>
