--- a/index.html
+++ b/index.html
@@ -150,15 +150,151 @@
          </section>
 
          <!-- Popular Products Section -->
-          <section class="md:container mx-auto py-10 my-10">
-            <h2 class="text-nature-primary text-3xl font-semibold py-10">Popular Products</h2>
+          <section class="py-10 my-10 bg-nature-secondary">
+            <div class="md:container mx-auto pb-10">
+              <h2 class="text-nature-primary text-3xl font-semibold py-10">Popular Products</h2>
 
-            <div>
+            <div class="flex flex-col lg:flex-row gap-5">
               <!-- Popular Products Banner -->
-               <div></div>
+               <div class="lg:w-1/3 border border-indigo-600 bg-gradient-to-br from-nature-primary to-white rounded-lg p-6 relative">
+                <h2 class="text-2xl font-semibold text-white">30% off</h2>
+                <p class="text-sm font-medium text-gray-700 pt-5 pb-4">Discover a world of treats, toys and essential handpicked for</p>
+                <button class="btn bg-white text-black text-xl font-normal">Buy Now</button>
+                <div class="absolute bottom-0 right-0">
+                  <img src="./assets/vegetable-offer.png" alt="">
+                </div>
+               </div>
 
                <!-- Popular Products Cards -->
-                <div></div>
+                <div class="lg:w-2/3 grid grid-cols-2 lg:grid-cols-3 gap-5">
+                  
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+                  
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+
+                  <div class="flex flex-row border border-indigo-600 rounded-lg bg-white p-2">
+                    <div class="bg-nature-secondary rounded-lg p-2">
+                      <img class="w-16 h-16" src="./assets/onion.png" alt="">
+                    </div>
+                    <div class="ml-2">
+                      <div class="flex flex-row items-center">
+                        <i class="fa-solid fa-star text-amber-500"></i>
+                        <p class="ml-3">4.5</p>
+                      </div>
+                      <h4 class="text-xl py-1 font-semibold">Onion 1KG</h4>
+                      <p  class="font-semibold">$39.99</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
             </div>
 
           </section>
