--- a/index.html
+++ b/index.html
@@ -298,6 +298,41 @@
             </div>
 
           </section>
+
+          <!-- Arrival and Offers Section -->
+           <section class="md:container mx-auto py-10 my-10">
+            <h2 class="text-nature-primary text-3xl font-semibold py-10">Arrival & Offers</h2>
+
+            <div class="flex gap-5">
+
+              <!-- Offer Card 1 -->
+              <div class="w-3/5 bg-green-800 flex flex-row rounded-xl justify-around p-5">
+                <div class="flex flex-col items-start justify-center">
+                  <img src="./assets/dawat-logo.png" alt="">
+                  <button class="btn bg-green-500 border-none text-black text-xl font-normal my-5 text-white">Cook Exotic Dishes</button>
+                  <h1 class="text-4xl font-normal text-white">UP to <span class="font-semibold">20% OFF</span></h1>
+                </div>
+                <div>
+                  <img src="./assets/dawat-mock-up.png" alt="">
+                </div>
+
+              </div>
+
+              <!-- Offer Card 2 -->
+              <div class="w-2/5 bg-blue-950 flex flex-row rounded-xl justify-around p-5">
+                <div class="flex flex-col items-start justify-center">
+                  <img src="./assets/india-gate-logo.png" alt="">
+                  <button class="btn bg-blue-500 border-none text-black text-xl font-normal my-5 text-white">Cook Exotic Dishes</button>
+                  <h1 class="text-4xl font-normal text-white">UP to <span class="font-semibold">20% OFF</span></h1>
+                </div>
+                <div>
+                  <img src="./assets/india-gate-mock-up.png" alt="">
+                </div>
+
+              </div>
+            </div>
+
+           </section>
     </main>
 
     <footer></footer>
